添加了多级缓存，差异化防超卖 + Kafka 异步落库